| Summary: | ASTERISK-26549: app_dial: When PickupChan() is used some channels may have incorrect device state | ||||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |||
| Date Opened: | 2016-11-02 09:14:47 | Date Closed: | 2016-11-02 14:08:57 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Applications/app_dial | ||
| Versions: | Frequency of Occurrence | ||||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | Given the scenario where multiple channels are dialed using Dial() but the caller is picked up using PickupChan() all outgoing channels except the channel specified to PickupChan() would be marked as ringing until the call had been hung up. | ||||
| Comments: | By: Friendly Automation (friendly-automation) 2016-11-02 14:08:58.256-0500 Change 4279 merged by zuul: app_dial: Fix incorrect device state when channel is picked up. [https://gerrit.asterisk.org/4279|https://gerrit.asterisk.org/4279] By: Friendly Automation (friendly-automation) 2016-11-02 14:09:00.859-0500 Change 4280 merged by zuul: app_dial: Fix incorrect device state when channel is picked up. [https://gerrit.asterisk.org/4280|https://gerrit.asterisk.org/4280] By: Friendly Automation (friendly-automation) 2016-11-02 14:09:43.679-0500 Change 4278 merged by zuul: app_dial: Fix incorrect device state when channel is picked up. [https://gerrit.asterisk.org/4278|https://gerrit.asterisk.org/4278] By: Friendly Automation (friendly-automation) 2016-11-02 14:10:45.234-0500 Change 4277 merged by Joshua Colp: app_dial: Fix incorrect device state when channel is picked up. [https://gerrit.asterisk.org/4277|https://gerrit.asterisk.org/4277] | ||||